# getquotes

./: .bacon-locations  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  TODO.md  build.rs  config.schema.json  output.txt  pkgbuild-ci.sh  quotes.db  update_checksums.sh
.cargo/: config.toml
.chglog/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: analysis.yaml  build-android.yaml  build-linux.yaml  build-mac.yaml  build-windows.yaml  build.yaml  create-release.yaml  lint.yaml  release-github.yaml  release.yml  test-code.yaml
ci/: brew-ci.sh  pkgbuild-ci.sh
completions/: _getquotes  _getquotes.ps1  getquotes.bash  getquotes.elv  getquotes.fish
man/: getquote.md  getquotes.1  getquotes.ps1xml
src/: background.rs  cache.rs  cli.rs  config.rs  lib.rs  logger.rs  main.rs  quotes.rs  tests.rs  throttle.rs
tests/: background_tests.rs  cache_tests.rs  cli_tests.rs  config_full_tests.rs  config_tests.rs  integration_tests.rs  lib_tests.rs  logger_tests.rs  quotes_tests.rs
tests/common/: mod.rs
