[package]
name = "getquotes"
version = "0.2.3"
edition = "2021"
authors = ["MuntasirSZN <muntasir.joypurhat@gmail.com>"]
description = "A command line tool to get quotes from the WikiQuotes"
license = "MIT"
documentation = "https://github.com/MuntasirSZN/getquotes"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/getquotes"
keywords = ["quotes", "wikiquote", "command-line", "cli", "rust"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
urlencoding = "2.1.3"
scraper = "0.22.0"
colored = "3.0.0"
dirs = "6.0.0"
html-escape = "0.2.13"
logger = "0.4.0"
env_logger = "0.11.6"
log = "0.4.25"
chrono = "0.4.39"
rusqlite = { version = "0.32.1", features = ["bundled"] }
clap = { version = "4.4.7", features = ["std", "help", "cargo", "derive", "error-context", "string", "color", "usage", "wrap_help"] }
git_rev = "0.1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
